# demo

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cube.fs.glsl
app/src/main/res/layout/: activity_animation.xml  activity_bitmap.xml  activity_camera.xml  activity_cube.xml  activity_custorm_view.xml  activity_ffmpeg.xml  activity_gl_preview.xml  activity_layout.xml  activity_main.xml  activity_shader.xml  activity_surface_view.xml  activity_thread_hook.xml  activity_video_decode.xml  activity_view_pager.xml  fragment_collection_object.xml  fragment_first.xml  fragment_second.xml  fragment_seek_bar.xml  item_acitivity_info.xml  item_text_info.xml  item_view_pager.xml
app/src/main/res/transition/: move.xml
app/src/main/res/values/: strings.xml
ffmpeg/: CMakeLists.txt  build.gradle
ffmpeg/src/androidTest/java/cn/noblel/ffmpeg/: ExampleInstrumentedTest.kt
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: config.h  native-lib.cpp
ffmpeg/src/main/java/cn/noblel/ffmpeg/: FFmpegHelper.java
ffmpeg/src/test/java/cn/noblel/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/java/: AndroidManifest.xml
opencv/java/src/org/opencv/android/: AsyncServiceHelper.java  Camera2Renderer.java  CameraBridgeViewBase.java  CameraGLRendererBase.java  CameraGLSurfaceView.java  CameraRenderer.java  FpsMeter.java  JavaCamera2View.java  JavaCameraView.java  StaticHelper.java  Utils.java
opencv/java/src/org/opencv/calib3d/: Calib3d.java  StereoBM.java  StereoSGBM.java
opencv/java/src/org/opencv/core/: Algorithm.java  Core.java
opencv/java/src/org/opencv/dnn/: DictValue.java  Dnn.java  Layer.java  Net.java
opencv/java/src/org/opencv/ml/: ANN_MLP.java  (+13 more)
opencv/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
opencv/native/jni/abi-armeabi/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/abi-armeabi-v7a/: OpenCVModules-release.cmake
opencv/native/jni/abi-mips/: OpenCVModules-release.cmake
opencv/native/jni/abi-mips64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/abi-x86/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/abi-x86_64/: OpenCVConfig.cmake  OpenCVModules-release.cmake
opencv/native/jni/include/opencv2/: calib3d.hpp  core.hpp  cvconfig.h  features2d.hpp  flann.hpp  highgui.hpp  imgcodecs.hpp  imgproc.hpp  ml.hpp  objdetect.hpp  photo.hpp  stitching.hpp  superres.hpp  videoio.hpp
source_class/: Context.puml
source_sequence/: view.puml
thread-hook/: CMakeLists.txt  build.gradle
thread-hook/src/androidTest/java/cn/noblel/threadhook/: ExampleInstrumentedTest.java
thread-hook/src/main/: AndroidManifest.xml
thread-hook/src/main/cpp/: threadhook_jni.cc
thread-hook/src/main/java/cn/noblel/threadhook/: ThreadHook.java
thread-hook/src/test/java/cn/noblel/threadhook/: ExampleUnitTest.java
xhook/: build.gradle
xhook/src/main/: AndroidManifest.xml
yuv/: CMakeLists.txt  build.gradle
yuv/src/main/: AndroidManifest.xml
(+179 files in other folders)
